--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Bomber's Baedeker: automatisierte Umwandlung zu XML
+description: Kurzprojekt (Oktober-Dezember 2020), IEG, DH Lab
