--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-slate
 title: Bomber's Baedeker
-description: all projects and activities related to the Bomber's Baedeker
+description: projects and activities related to the Bomber's Baedeker
